# ComputationalIntelligence

./: README.md
HalloweenChallenge/: Halloween.ipynb  Presentazione Halloween Challenge.pptx  README.md  Results.md  pyproject.toml
lab10/: README.md  lab10.ipynb  pyproject.toml
lab2/: lab2-nim.ipynb  pyproject.toml
lab9/: README.md  lab9.ipynb  lab9_tentativo.ipynb  pyproject.toml
n_friends_project/: 4-friends.ipynb  README.md  pyproject.toml
quixo/: main.ipynb  players.py  pyproject.toml
set_covering_assignment/: README.md  pyproject.toml  set-covering.ipynb
