[tool.poetry]
name = "lab10"
version = "0.1.0"
description = ""
authors = ["PaolaMts <127331331+PaolaMts@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.27.1"
numpy = "^1.26.2"
tqdm = "^4.66.1"
ipywidgets = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
