[tool.poetry]
name = "lab9"
version = "0.1.0"
description = ""
authors = ["PaolaMts <127331331+PaolaMts@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"
ipykernel = "^6.27.1"
matplotlib = "^3.8.2"
scipy = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
