[tool.poetry]
name = "quixo"
version = "0.1.0"
description = ""
authors = ["PaolaMts <127331331+PaolaMts@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.66.1"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
